# qt

GA/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
fourier/: CMakeLists.txt  fourier.h  mainwindow.cpp  mainwindow.ui
genetic_algoirthm/: CMakeLists.txt  chromosome.cpp  chromosome.h  ga_problem.cpp  ga_problem.h  ga_tool.cpp  ga_tool.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
genetic_algoirthm/src/: chromosome.cpp  crowdingga.cpp  crowdingga.h  ga_problem.cpp  ga_problem.h  ga_tool.cpp  ga_tool.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  nsga.cpp  nsga.h  nsga_chromosome.cpp  nsga_chromosome.h  selection_method.cpp  selection_method.h
genetic_algoirthm/test/: CMakeLists.txt  test_ga_tool.cpp  test_nsga.cpp  test_selection_method.cpp
graphics_model/: CMakeLists.txt  mainwindow.ui  resource.qrc
graphics_model/src/: StockSocketInterface.h  gmedge.cpp  gmedge.h  gmgraphicsview.cpp  gmgraphicsview.h  gmnode.cpp  gmnode.h  gmobject.h  gmqtgraphicscuttingline.cpp  gmqtgraphicsedge.cpp  gmqtgraphicsedge.h  gmqtgraphicsnode.cpp  gmqtgraphicsnode.h  gmqtgraphicsscene.cpp  gmqtgraphicsscene.h  gmqtgraphicssocket.cpp  gmqtgraphicssocket.h  gmscene.cpp  gmscene.h  gmserializable.h  gmsocket.cpp  gmsocket.h  gmsocketinterface.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  stockedgeinterface.h  stocknodeinterface.h
neural_network/: CMakeLists.txt  circle.cpp  circle.h  fancyline.cpp  fancyline.h  fourier.cpp  fourier.h  fourier.ui  fouriersimulation.h  line.cpp  line.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  myitem.cpp  myitem.h  neuralnetwork.cpp  neuralnetwork.h
stock/: CMakeLists.txt  StockSocketInterface.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  stockedge.cpp  stockedge.h  stockgraphicscuttingline.cpp  stockgraphicscuttingline.h  stockgraphicsedge.cpp  stockgraphicsedge.h  stockgraphicsnode.cpp  stockgraphicsnode.h  stockgraphicsscene.cpp  stockgraphicsscene.h  stockgraphicssocket.cpp  stockgraphicssocket.h  stockgraphicsview.cpp  stockgraphicsview.h  stocknode.cpp  stocknode.h  stocknodeinterface.h  stockscene.cpp  stockscene.h  stocksceneinterface.h  stocksocket.cpp  stocksocket.h
stock/resource/stylesheet/: Geoo.qss
stock/src/: gmedge.cpp  gmedge.h  gmgraphicsview.cpp  gmgraphicsview.h  gmnode.cpp  gmnode.h  gmqtgraphicscuttingline.h  gmqtgraphicsedge.h  gmqtgraphicsnode.h  gmqtgraphicssocket.cpp  gmscene.cpp  gmscene.h  gmserializable.h  gmsocket.cpp  mainwindow.cpp  stockgraphicscuttingline.cpp  stockgraphicscuttingline.h  stockgraphicsedge.cpp  stockgraphicsnode.cpp  stockgraphicsnode.h  stockgraphicsscene.cpp  stockgraphicsscene.h  stockscene.cpp
